Various minor changes

--- a/demo.md.html
+++ b/demo.md.html
@@ -14,7 +14,7 @@
         <br><br><br>
         <big>Noah Doersing</big>
         <br><br>
-        *November 30, 2019*
+        *November TODO, 2019*
     </div>
     <div class="title-page-bottom">
         <div style="display: inline-block; margin-right: 2em; vertical-align: top;">
@@ -39,7 +39,25 @@
 
 (##) Abstract
 
-test
+Eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
+
+Veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+Ancillary contributions include TODO markdeep-slides, -thesis
 
 <br><br>
 
@@ -66,7 +84,7 @@ $E = mc^2$
 * a list of items
 * more
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+Lorem ipsum dolor `mfrac` sit amet, consectetur adipisicing `<mfrac test="abc">`elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
 
