Improve title page

--- a/demo.md.html
+++ b/demo.md.html
@@ -2,31 +2,28 @@
 
 <!-- TODO improve titlepage: make a class for this, set height to 100%, use flex or something for spacing -->
 <section class="title-page">
-    <div class="title-page-top">
-        <big>Eberhard Karls Universität Tübingen</big><br>
-        Mathematisch-Naturwissenschaftliche Fakultät<br>
-        Wilhelm-Schickard-Institut für Informatik<br>
+    <div class="title-top">
+        <div class="title-institution">Eberhard Karls Universität Tübingen</div>
+        <div class="title-institution-extra">Mathematisch-Naturwissenschaftliche Fakultät<br>
+        Wilhelm-Schickard-Institut für Informatik</div>
     </div>
-    <div class="title-page-middle">
-        <big>Master's Thesis in Media Informatics</big>
-        <br><br>
-        <span style="font-family: var(--heading-font); font-weight: bold; font-size: 3.5rem;" id="thesis-title">UnicodeMath ⥅ MathML</span>
-        <br><br><br>
-        <big>Noah Doersing</big>
-        <br><br>
-        *November 30, 2019*
+    <div class="title-middle">
+        <div class="title-kind">Master's Thesis in Media Informatics</div>
+        <div class="title-title">UnicodeMath ⥅ MathML Testing testing testing testing Testing mroe</div>
+        <div class="title-author">Noah Doersing</div>
+        <div class="title-date">November 29, 2019</div>
     </div>
-    <div class="title-page-bottom">
-        <div style="display: inline-block; margin-right: 2em; vertical-align: top;">
-            **Reviewers:**
+    <div class="title-bottom">
+        <div class="thesis-reviewer">
+            Reviewers:
         </div>
-        <div style="display: inline-block; margin-right: 2em; vertical-align: top;">
+        <div class="thesis-reviewer">
             Prof. Dr. Torsten Grust<br>
             Database Systems Research Group<br>
             Wilhelm-Schickard-Institut für Informatik<br>
             Universität Tübingen
         </div>
-        <div style="display: inline-block; margin-right: 2em; vertical-align: top;">
+        <div class="thesis-reviewer">
             Prof. Dr. Thomas Walter<br>
             Direktor des ZDV/Arbeitsbereich Informationsdienste<br>
             Wilhelm-Schickard-Institut für Informatik<br>
