--- a/demo.md.html
+++ b/demo.md.html
@@ -1,38 +1,28 @@
 <meta charset="utf-8" lang="en">
 
-<!-- TODO improve titlepage: make a class for this, set height to 100%, use flex or something for spacing -->
-<section class="title-page">
-    <div class="title-top">
-        <div class="title-institution">Eberhard Karls Universität Tübingen</div>
-        <div class="title-institution-extra">Mathematisch-Naturwissenschaftliche Fakultät<br>
-        Wilhelm-Schickard-Institut für Informatik</div>
-    </div>
-    <div class="title-middle">
-        <div class="title-kind">Master's Thesis in Media Informatics</div>
-        <div class="title-title">UnicodeMath ⥅ MathML Testing testing testing testing Testing mroe</div>
-        <div class="title-author">Noah Doersing</div>
-        <div class="title-date">November 29, 2019</div>
-    </div>
-    <div class="title-bottom">
-        <div class="thesis-reviewer">
-            Reviewers:
-        </div>
-        <div class="thesis-reviewer">
-            Prof. Dr. Torsten Grust<br>
-            Database Systems Research Group<br>
-            Wilhelm-Schickard-Institut für Informatik<br>
-            Universität Tübingen
-        </div>
-        <div class="thesis-reviewer">
-            Prof. Dr. Thomas Walter<br>
-            Direktor des ZDV/Arbeitsbereich Informationsdienste<br>
-            Wilhelm-Schickard-Institut für Informatik<br>
-            Universität Tübingen
-        </div>
-    </div>
-</section>
-
----
+<script>
+var titlePage = {
+      institution: "Eberhard Karls Universität Tübingen"
+    , institutionExtra: `Mathematisch-Naturwissenschaftliche Fakultät
+                         Wilhelm-Schickard-Institut für Informatik`
+    , thesisKind: "Master's Thesis in Media Informatics"
+    , thesisTitle: "UnicodeMath ⥅ MathML"
+    , thesisAuthor: "Noah Doersing"
+    , thesisDate: "November 30, 2019"
+    , reviewers: [
+          `Prof. Dr. Torsten Grust
+           Database Systems Research Group
+           Wilhelm-Schickard-Institut für Informatik
+           Universität Tübingen
+          `
+        , `Prof. Dr. Thomas Walter
+           Direktor des ZDV/Arbeitsbereich Informationsdienste
+           Wilhelm-Schickard-Institut für Informatik
+           Universität Tübingen
+          `
+      ]
+  }
+</script>
 
 (##) Abstract
 
@@ -489,40 +479,25 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
+<link rel="stylesheet" href="markdeep-thesis/style.css">
+<script src="markdeep-thesis/lib/bindery/2.2.8/bindery.min.js"></script>
 <script>
     var markdeepThesisOptions = {
-          mathJax: ["TeX", "MathML"]  // TODO if none, don't load mathjax, if values, insert into jax: ["input/TeX", "input/MathML", "output/SVG"] line
-        , pageSize: {width: '21cm', height: '29.7cm'}  // TODO => bindery config
-        , pageMargins: {top: '2.5cm', inner: '3.5cm', outer: '2.5cm', bottom: '2.5cm'}  // TODO => bindery config
-        , view: "print"  // TODO or ... => translate, bindery config
-        , extraBinderyRules: []  // TODO to be merged with bindery rules list
-        , runningHeader: ""  // TODO function, or just author setting?
-        , titlePage: {  // TODO after markdeep done, insert rendered div.titlepage at start of .md (maybe specify thesis title inline, with (#)?)
-              institution: "Eberhard Karls Universität Tübingen"
-            , instututionExtra: `Mathematisch-Naturwissenschaftliche Fakultät
-                                 Wilhelm-Schickard-Institut für Informatik`
-            , thesisKind: "Master's Thesis in Media Informatics"
-            , thesisTitle: "UnicodeMath ⥅ MathML"
-            , thesisAuthor: "Noah Doersing"
-            , thesisDate: "November 30, 2019"
-            , reviewers: [
-                  `Prof. Dr. Torsten Grust
-                   Database Systems Research Group
-                   Wilhelm-Schickard-Institut für Informatik
-                   Universität Tübingen
-                  `
-                , `Prof. Dr. Thomas Walter
-                   Direktor des ZDV/Arbeitsbereich Informationsdienste
-                   Wilhelm-Schickard-Institut für Informatik
-                   Universität Tübingen
-                  `
-              ]
+          view: "print"
+        , titlePage: titlePage
+        , fontSize: 10.5
+        , runningHeader: function (page) {
+              if (page.isLeft) {
+                  if (page.heading.h1 != null) {
+                      return `${page.number}⁓${page.heading.h1}`  // alternatives: ⸺, ⸻
+                  }
+                  return `${page.number}`
+              } else {
+                  return `Noah Doersing⁓${page.number}`;
+              }
           }
-        , fontSize: 10.5  // TODO in pt, set css var
-        , markdeepDiagramScale: 1.0  // TODO same machinery as for markdeep-slides
+        , markdeepDiagramScale: 0.8
     }
 </script>
-<link rel="stylesheet" href="markdeep-thesis/style.css">
 <script src="markdeep-thesis/markdeep-thesis.js"></script>
 <script src="markdeep-thesis/lib/markdeep/1.06/markdeep.min.js" charset="utf-8"></script>
-<script src="markdeep-thesis/lib/bindery/2.2.8/bindery.min.js"></script>
