--- a/demo.md.html
+++ b/demo.md.html
@@ -417,9 +417,9 @@ The has been the best thing you've read today.
 <div style="width: 70%; margin: 5rem auto 0;">
     (##) Declaration of Authorship
 
-    I hereby declare that the thesis submitted is my own unaided work. All direct or indi- rect sources used are acknowledged as references.
+    I hereby declare that the thesis submitted is my own unaided work. All direct or indirect sources used are acknowledged as references.
 
-    I am aware that the thesis in digital form can be examined for the use of unauthor- ized aid and in order to determine whether the thesis as a whole or parts incorpo- rated in it may be deemed as plagiarism. For the comparison of my work with exist- ing sources I agree that it shall be entered in a database where it shall also remain after examination, to enable comparison with future theses submitted. Further rights of reproduction and usage, however, are not granted here.
+    I am aware that the thesis in digital form can be examined for the use of unauthorized aid and in order to determine whether the thesis as a whole or parts incorpo- rated in it may be deemed as plagiarism. For the comparison of my work with existing sources I agree that it shall be entered in a database where it shall also remain after examination, to enable comparison with future theses submitted. Further rights of reproduction and usage, however, are not granted here.
 
     This paper was not previously presented to another examination board and has not been published.
 
