Add thesis subtitle functionality

--- a/demo.md.html
+++ b/demo.md.html
@@ -7,8 +7,9 @@ var titlePage = {
                          Institute of Space Systems`
     , thesisKind: "Master's Thesis in Applied Thesology"
     , thesisTitle: "Novel Typesetting Tools for Undergraduate and Graduate Theses"
+    , thesisSubtitle: "But how novel are they really?"
     , thesisAuthor: "Noah Doersing"
-    , thesisDate: "November 31, 3019"
+    , thesisDate: "Stardate 48315.6"
     , reviewers: [
           `Harry Q. Bovik
            Senior Computer Scientist
