--- a/demo.md.html
+++ b/demo.md.html
@@ -431,6 +431,7 @@ The has been the best thing you've read today.
     <span style="font-family: var(--reference-font)">City, date and signature</span>
 </div>
 
+<link rel="stylesheet" href="markdeep-thesis/lib/markdeep-relative-sizes/1.07/relativize.css">
 <link rel="stylesheet" href="markdeep-thesis/style.css">
 <script src="markdeep-thesis/lib/bindery/2.2.8/bindery.min.js"></script>
 <script>
