Emit better error if a footnote definition is not found

--- a/demo.md.html
+++ b/demo.md.html
@@ -365,7 +365,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 Eu turpis egestas pretium aenean. Nunc consequat interdum varius sit amet mattis vulputate enim. Porttitor rhoncus dolor purus non enim praesent elementum facilisis. Rhoncus mattis rhoncus urna neque viverra justo nec. Consequat id porta nibh venenatis cras sed felis eget. Faucibus a pellentesque sit amet.
 
-Porttitor eget dolor morbi non. Sodales ut etiam sit amet nisl purus in mollis. Fermentum dui faucibus in ornare quam viverra orci. Integer enim neque volutpat ac tincidunt vitae semper. Donec ac odio tempor orci dapibus. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Mi bibendum neque egestas congue quisque egestas diam. Quam id leo in vitae turpis massa sed elementum. Tortor consequat id porta nibh venenatis cras sed felis eget. Congue eu consequat ac felis donec et odio.
+Porttitor eget dolor morbi non. Sodales ut etiam sit amet nisl purus in mollis. Fermentum dui faucibus in ornare quam viverra orci. Integer enim neque volutpat ac tincidunt vitae semper. Donec ac odio tempor orci dapibus. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Mi bibendum neque egestas congue quisque egestas diam. Quam id leo in vitae turpis massa sed elementum. Tortor consequat id porta nibh venenatis cras sed felis eget. Congue eu consequat ac felis donec et odio. [^testttt]
 
 
 # Conclusion
